--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <body>
         <div id="container">
             <div id="top">
-              <h1>Airsoft - Najlepsze hobby na świecie!</h1>
+              <h1>Airsoft<br/><h5>Najlepsze hobby na świecie!</h5></h1>
             </div>
 
             <div id="nav">
@@ -29,10 +29,10 @@
         
             </div>
             <div id="content">
-               Airsoft - gra zespołowa wykorzystująca pneumatyczne elektryczne, gazowe i sprężynowe repliki broni palnej strzelające plastikowymi kulkami o kalibrze 6 (rzadziej 8) mm.<br/><br/>
+               <b>Airsoft</b> - gra zespołowa wykorzystująca pneumatyczne elektryczne, gazowe i sprężynowe repliki broni palnej strzelające plastikowymi kulkami o kalibrze 6 (rzadziej 8) mm.<br/><br/>
                Podstawowym celem w grze jest trafienie przeciwnika plastikową, najczęściej nie powodującą obrażeń, kulką.<br/> 
                Scenariusze gry zazwyczaj naśladują fikcyjne bądź historyczne działania wojenne, policyjne lub potyczki oddziałów paramilitarnych.<br/>
-               W czasie rozgrywki obowiązuje zestaw zasad bezpieczeństwa spisanych w tzw. prawie ASG. Najważniejszą z nich jest obowiązek używania okularów ochronnych. <br/>
+               W czasie rozgrywki obowiązuje zestaw zasad bezpieczeństwa spisanych w tzw. prawie ASG.<br/> Najważniejszą z nich jest obowiązek używania okularów ochronnych. <br/>
                Ustalenia szczegółowe zasad trafienia, czasu powrotu do gry, warunków zwycięstwa itp. zależą od typu rozgrywki.
 
 
