--- a/index.html
+++ b/index.html
@@ -12,27 +12,30 @@
         <meta name="description" content="Strona przedstawia i opisuje sport zwany Airsoftem. Daj się do niego zachęcić" />
   
         <meta name="keywords" content="airsoft, asg, hobby"/>
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;700&display=swap" rel="stylesheet">
     </head>
 
     <body>
         <div id="container">
             <div id="top">
-              <h1>Airsoft<br/><h5>Najlepsze hobby na świecie!</h5></h1>
+              <h1>Airsoft - Najlepsze hobby na świecie!</h1>
             </div>
 
             <div id="nav">
-                Czym jest Airsoft ? <br/><br/>
-
-                Co jest potrzebne żeby zacząć ? <br/><br/>
-
-                Galeria
+                <div class="option">Czym jest Airsoft ?</div><br/>
+                <div class="option">Co jest potrzebne żeby zacząć ?</div><br/>
+                <div class="option">Galeria</div>
         
             </div>
             <div id="content">
                <b>Airsoft</b> - gra zespołowa wykorzystująca pneumatyczne elektryczne, gazowe i sprężynowe repliki broni palnej strzelające plastikowymi kulkami o kalibrze 6 (rzadziej 8) mm.<br/><br/>
-               Podstawowym celem w grze jest trafienie przeciwnika plastikową, najczęściej nie powodującą obrażeń, kulką.<br/> 
-               Scenariusze gry zazwyczaj naśladują fikcyjne bądź historyczne działania wojenne, policyjne lub potyczki oddziałów paramilitarnych.<br/>
-               W czasie rozgrywki obowiązuje zestaw zasad bezpieczeństwa spisanych w tzw. prawie ASG.<br/> Najważniejszą z nich jest obowiązek używania okularów ochronnych. <br/>
+               Podstawowym celem w grze jest trafienie przeciwnika plastikową, najczęściej nie powodującą obrażeń, kulką.<br/> <br/>
+               Scenariusze gry zazwyczaj naśladują fikcyjne bądź historyczne działania wojenne, policyjne lub potyczki oddziałów paramilitarnych.<br/><br/>
+               W czasie rozgrywki obowiązuje zestaw zasad bezpieczeństwa spisanych w tzw. prawie ASG.<br/><br/>
+                Najważniejszą z nich jest obowiązek używania okularów ochronnych. <br/><br/>
                Ustalenia szczegółowe zasad trafienia, czasu powrotu do gry, warunków zwycięstwa itp. zależą od typu rozgrywki.
 
 
